# atlas

./: .gitignore  CLAUDE.md  DATA_INVENTORY.md  GUIDANCE_DOCS.md  QUICK_START_GUIDANCE.md  README.md  SUMMARY.md  coverage.json  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
data/: .gitkeep
docs/: DC_IMPORT_GUIDE.md  DC_TAX_EXPLORATION.md  STATE_SCRAPERS.md  STATE_SOURCES.md
docs/architecture/: source-organization.md
docs/infrastructure/: R2_SETUP.md
scripts/: add_rev_proc_metadata.py  ak_to_akn.py  ar_create_akn_index.py  ar_to_akn.py  archive_pe_sources.py  ca_to_akn.py  convert_co_to_akn.py  convert_ma_to_akn.py  convert_me_to_akn.py  convert_mi_to_akn.py  convert_mo_to_akn.py  convert_sd_to_akn.py  convert_wy_to_akn.py  ct_to_akn.py  extract_dc_tax.py  extract_usc_xrefs.py  fetch_rev_proc.py  fl_to_akn.py  hi_to_akn.py  id_to_akn.py  il_to_akn.py  in_to_akn.py  ingest_canada.py  ingest_title26.py  ingest_titles.py  ks_to_akn.py  la_to_akn.py  md_to_akn.py  mn_to_akn.py  ms_to_akn.py  mt_to_akn.py  nj_to_akn.py  nm_to_akn.py  nv_to_akn.py  ny_to_akn.py  nz_to_akn.py  ok_to_akn.py  or_to_akn.py  pa_to_akn.py  publicresource_to_akn.py  (+7 more)
sources/policyengine-us/: federal_references.txt  state_references.txt
src/arch/: archive.py  cli.py  crawl.py  crawl_playwright.py  models_canada.py
src/arch/converters/: mn_statutes.py  state_to_uslm.py  tn_html_to_akn.py
src/arch/converters/us_states/: __init__.py  ak.py  dc.py  nm.py  or_.py  wv.py
src/arch/fetchers/: __init__.py  ecfr.py  state_benefits.py
src/arch/ingest/: __init__.py  supabase.py
src/arch/parsers/: __init__.py  base.py  generic_state.py
src/arch/parsers/canada/: __init__.py  statutes.py
src/arch/parsers/us/: statutes.py
src/arch/query/: supabase.py
src/arch/sources/: registry.py  uslm.py
src/arch/storage/: r2.py
src/atlas/: __init__.py  archive.py  cli.py  converters.py  crawl.py  crawl_playwright.py  encoder.py  models.py  models_akoma_ntoso.py  models_guidance.py  models_regulation.py  models_statute.py  models_uk.py  verifier.py  writer.py
src/atlas/api/: __init__.py  main.py
src/atlas/converters/: __init__.py  base.py  ca_laws.py  ecfr.py  mn_statutes.py  nz_pco.py  state_to_uslm.py  tn_html_to_akn.py  uk_clml.py
src/atlas/fetchers/: __init__.py  ecfr.py  irs_bulk.py  irs_guidance.py  irs_parser.py  legislation_canada.py  legislation_uk.py  state_benefits.py
src/atlas/ingest/: __init__.py  supabase.py
src/atlas/parsers/: __init__.py  base.py  cfr.py  clml.py  ny_laws.py  uslm.py
src/atlas/pipeline/: __init__.py  akn.py  cli.py  runner.py
src/atlas/query/: __init__.py  supabase.py
src/atlas/scripts/: __init__.py  build_archive.py
src/atlas/sources/: __init__.py  api.py  base.py  html.py  registry.py  uslm.py
src/atlas/storage/: __init__.py  base.py  guidance.py  postgres.py  r2.py  regulation.py  sqlite.py  supabase.py
src/lawarchive/: __init__.py  archive.py  cli.py  models.py
src/lawarchive/api/: main.py
src/lawarchive/parsers/: uslm.py
src/lawarchive/storage/: __init__.py  base.py  postgres.py  sqlite.py
tests/: __init__.py  test_ak_converter.py  test_al_converter.py  test_api_main.py  test_ar_converter.py  test_archive.py  test_az_converter.py  test_ca_laws_converter.py  test_ca_state_converter.py  test_canada_parser.py  test_cfr_fetcher.py  test_cfr_parser.py  test_cli.py  test_clml_parser.py  test_co_converter.py  test_converter_base.py  test_converters_base.py  test_converters_ecfr.py  test_converters_legacy.py  test_converters_mn.py  test_converters_nz.py  test_converters_state_to_uslm.py  test_converters_tn.py  test_coverage_gaps.py  test_crawl.py  test_crawl_playwright.py  test_ct_converter.py  test_dc_converter.py  test_de_converter.py  test_document_writer.py  test_ecfr_converter.py  test_encoder.py  test_fetchers_irs_guidance.py  test_fetchers_legislation_canada.py  test_fl_converter.py  test_ga_converter.py  test_generic_statutes.py  test_hi_converter.py  test_ia_converter.py  test_id_converter.py  (+75 more)
(+78 files in other folders)
