[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosilico-atlas"
version = "0.1.0"
description = "Structured policy document API - statutes, regulations, and guidance"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Cosilico", email = "engineering@cosilico.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.26",
    "click>=8.0",
    "rich>=13.0",
    "sqlite-utils>=3.35",
    "anthropic>=0.75.0",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
verify = [
    "dpath>=2.0",
    "policyengine-core>=3.20",
    "policyengine-us>=1.45",
]

[project.scripts]
atlas = "atlas.cli:main"

[project.urls]
Homepage = "https://github.com/CosilicoAI/cosilico-atlas"
Documentation = "https://docs.cosilico.ai/atlas"
Repository = "https://github.com/CosilicoAI/cosilico-atlas"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI Query() in defaults is idiomatic

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
